<resources>
    <string name="app_name">Flickr Api Sample</string>

    <!--Default-->
    <string name="default_error">Error</string>
    <string name="default_ok">Ok</string>
    <string name="default_connection_error">Please verify you connection and try again.</string>
    <string name="default_generic_error">There was an error getting the content. Please try again</string>

    <!--Gallery Screen-->
    <string name="gallery_screen_title">Flickr Public Feed</string>
    <string name="gallery_empty_message">There are no photos to show at this moment</string>

    <string name="gallery_photo_title">Title:</string>
    <string name="gallery_photo_author">Author:</string>
    <string name="gallery_photo_tags">Tags:</string>
    <string name="gallery_photo_no_tags">none</string>

    <string name="photo_detail_actions">Actions</string>
    <string name="photo_detail_save">Save photo to device</string>
    <string name="photo_detail_open">Open in browser</string>
    <string name="photo_detail_share">Share by email</string>

    <string name="photo_detail_title">Title:</string>
    <string name="photo_detail_author">Author:</string>
    <string name="photo_detail_tags">Tags:</string>
    <string name="photo_detail_no_tags">none</string>
</resources>
