<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/activityBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/darkGrey"
            android:textSize="20sp"
            android:text="@string/photo_detail_actions"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkGrey" />

    <Button
        android:id="@+id/save_photo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:textAllCaps="false"
        android:paddingLeft="16dp"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        android:text="@string/photo_detail_save" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkGrey" />

    <Button
        android:id="@+id/open_browser_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:textAllCaps="false"
        android:paddingLeft="16dp"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        android:text="@string/photo_detail_open" />

</LinearLayout>