<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/activityBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.jcmsalves.flickrapi.ui.SquareImageView
            android:id="@+id/photo_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/darkGrey"
                    android:text="Title:" />

                <TextView
                    android:id="@+id/photo_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/gallery_photo_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/darkGrey"
                    android:text="Author:" />

                <TextView
                    android:id="@+id/photo_author_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="14sp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/gallery_photo_author" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/darkGrey"
                    android:text="@string/gallery_photo_tags" />

                <TextView
                    android:id="@+id/photo_tags_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    android:textColor="@color/lightGrey"
                    android:text="tags" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <include
        android:id="@+id/bottom_sheet"
        layout="@layout/dialog_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_behavior="@string/bottom_sheet_behavior"/>

</android.support.design.widget.CoordinatorLayout>
